--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   ctx.lineTo(i*0.6,0);
   ctx.stroke();
   document.getElementById("middle").innerHTML = "אמצע האינטגרל: "+i/1000;
-  document.getElementById("top").innerHTML = "שיא הגרף: "+top/1000;
+  document.getElementById("top").innerHTML = "שיא הגרף: "+top/1000+"  ("+arr[top]+")";
  }
  
  function move(e){
