--- a/MosifimOr.html
+++ b/MosifimOr.html
@@ -3,6 +3,7 @@
 שם:  <input type="text" id="name"><br>
 <button onclick="update()">לקבלת קישור</button>
 <br>
+  <div id="name"></div>
 </body>
 </html>
 <script>
