--- a/MosifimOr.html
+++ b/MosifimOr.html
@@ -1,4 +1,6 @@
 <html>
+<title>מוסיפים אור - קבלת קישור אישי</title>
+<head> מוסיפים אור - קבלת קישור אישי</head>
 <body align="center" dir="rtl" style="font-family:'Arial';">
 <br>
 <br>
